feat: honor full OTLP/gRPC transport config; modernize to JDK 25 idioms
Complete the bundled OTLP/gRPC transport so it stops silently dropping
configuration, and apply targeted JDK 21-25 simplifications.

Transport (GrpcOtlpClient/GrpcOtlpServer):
- TLS via TlsChannelCredentials/TlsServerCredentials from the Tls sealed type
  (Disabled/SystemTrust/Custom; server rejects SystemTrust, having no cert)
- per-request auth headers via a MetadataUtils interceptor
- gzip compression via withCompression when configured
- gRPC-native retry: RetryPolicy mapped to the channel default service config
  (new RetryServiceConfig) over the OTLP-recommended retryable status codes

JDK modernization (behavior-preserving):
- record-deconstruction patterns in sealed-type switches; unnamed _ bindings
- sequenced-collection getFirst() in tests

MulticastPublisher: replace the dispatch busy-poll (Thread.sleep + timed poll)
with Semaphore-gated demand and a blocking take(), interrupt-driven shutdown.

RetryPolicy now validates backoffs at construction (positive and ordered when
retries are enabled) instead of the transport clamping them downstream.

Docs/Javadoc updated to reflect the honored config surface.

Tests: TransportConfigTest (TLS round-trip, retry, headers, compression),
RetryServiceConfigTest, plus demand-gating and validation coverage. Full
reactor `mvn verify` green, coverage gates met.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01V5Jpu3KmsTynQ3JigoQcoP